Todo parece indicar que ya no hay referencias hacia la BD local.

--- a/ProjectExpenseControl/ResourceSQL.resx
+++ b/ProjectExpenseControl/ResourceSQL.resx
@@ -131,6 +131,6 @@
     <value>[DBO].[SP_DeleteUserRemoveRole] @USR_IDE_USER</value>
   </data>
   <data name="SP_InsertUserAddRoleDefault" xml:space="preserve">
-    <value>[DBProgramExpenses].[dbo].[SP_InsertUserAddRoleDefault] @USR_IDE_AREA, @USR_DES_POSITION, @USR_DES_NAME, @USR_DES_FIRST_NAME, @USR_DES_LAST_NAME,    @USR_DES_PASSWORD, @USR_DES_PHONE,  @USR_DES_EMAIL,  @USR_FH_CREATED</value>
+    <value>[dbo].[SP_InsertUserAddRoleDefault] @USR_IDE_AREA, @USR_DES_POSITION, @USR_DES_NAME, @USR_DES_FIRST_NAME, @USR_DES_LAST_NAME,    @USR_DES_PASSWORD, @USR_DES_PHONE,  @USR_DES_EMAIL,  @USR_FH_CREATED</value>
   </data>
 </root>
